--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ SSL_KEY_FILE=localhost-key.pem
 # ========================================
 VITE_API_URL=https://localhost:5000/api   
 FRONTEND_URL=https://localhost:3000
-ALLOWED_ORIGINS=https://localhost:3000,https://wisemate.netlify.app,https://din-frontend-production.up.railway.app
+ALLOWED_ORIGINS=https://wise-production-2cc4.up.railway.app,https://localhost:3000
+
 
 # ========================================
 # DATABASE (PostgreSQL)
