--- a/.env
+++ b/.env
@@ -2,17 +2,16 @@
 # SERVER
 # ========================================
 PORT=5000
-HTTPS=true          
+HTTPS=true
 SSL_CRT_FILE=localhost.pem
 SSL_KEY_FILE=localhost-key.pem
 
 # ========================================
 # FRONTEND & API
 # ========================================
-VITE_API_URL=https://localhost:5000/api   
-FRONTEND_URL=https://localhost:3000
-ALLOWED_ORIGINS=https://wise-production-2cc4.up.railway.app,https://localhost:3000
-
+VITE_API_URL=https://localhost:5000/api    # Frontend (Vite) plockar upp denna
+FRONTEND_URL=https://localhost:3000        # Backend vet frontend URL
+ALLOWED_ORIGINS=https://localhost:3000,https://wisemate.netlify.app
 
 # ========================================
 # DATABASE (PostgreSQL)
